turns out I actually needed some of the template things

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Project specific
 env/
-**/jake_template/
+**/jake_template/django_things/
+**/jake_template/README.md
 
 
 # Byte-compiled / optimized / DLL files
