--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Project specific
-settings.py
+passenger_wsgi.py
+**settings.py
 env/
 **/jake_template/django_things/
 **/jake_template/README.md
